# rust_api_audio_to_text

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ambiente  README.md  docker-compose.yml  entrypoint.sh
src/: main.rs
