[package]
name = "rust_api_audio_to_text"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8"
actix-multipart = "0.6"
futures-util = "0.3"
serde_json = "1.0"
tokio = { version = "1.38", features = ["fs", "process"] }
hound = "3.5"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }